@@ -4,6 +4,9 @@ launchpad-buildd (216) UNRELEASED; urgency=medium
   * Allow specifying target architecture for snaps via
     SNAPCRAFT_BUILD_TO environment variable
 
+  [ Colin Watson ]
+  * Add a timeout when revoking proxy tokens.
+
  -- Andrey Fedoseev <andrey.fedoseev@canonical.com>  Mon, 27 Jun 2022 12:32:05 +0500
 
 launchpad-buildd (215) focal; urgency=medium
